--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Burbujas flotantes</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Burbujas Flotantes</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <canvas></canvas>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
+  <canvas id="canvas"></canvas>
   <script src="script.js"></script>
 </body>
 </html>
