--- a/index.html
+++ b/index.html
@@ -3,10 +3,141 @@
 <head>
   <meta charset="UTF-8">
   <title>Burbujas con Matter.js</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background: #f0f8ff;
+    }
+    canvas {
+      display: block;
+      touch-action: none;
+    }
+  </style>
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/matter-js@0.19.0/build/matter.min.js"></script>
-  <script src="script.js"></script>
+  <script>
+    const { Engine, Render, Runner, World, Bodies, Body, Events, Mouse, MouseConstraint } = Matter;
+
+    const engine = Engine.create();
+    const world = engine.world;
+
+    const width = window.innerWidth;
+    const height = window.innerHeight;
+
+    const render = Render.create({
+      element: document.body,
+      engine: engine,
+      options: {
+        width,
+        height,
+        wireframes: false,
+        background: '#f0f8ff'
+      }
+    });
+
+    Render.run(render);
+    Runner.run(Runner.create(), engine);
+
+    // Paredes
+    const wallThickness = 50;
+    const walls = [
+      Bodies.rectangle(width / 2, -wallThickness / 2, width, wallThickness, { isStatic: true }),
+      Bodies.rectangle(width / 2, height + wallThickness / 2, width, wallThickness, { isStatic: true }),
+      Bodies.rectangle(-wallThickness / 2, height / 2, wallThickness, height, { isStatic: true }),
+      Bodies.rectangle(width + wallThickness / 2, height / 2, wallThickness, height, { isStatic: true })
+    ];
+    World.add(world, walls);
+
+    // Crear burbuja
+    function createBubble(x, y, text, label) {
+      const radius = 60;
+      const body = Bodies.circle(x, y, radius, {
+        restitution: 0.9,
+        frictionAir: 0.01,
+        label: label,
+        render: {
+          fillStyle: '#add8e6',
+          strokeStyle: '#000',
+          lineWidth: 2
+        }
+      });
+      body.originalRadius = radius;
+      body.bubbleText = text;
+      return body;
+    }
+
+    const bubble1 = createBubble(100, 100, 'Hola', 'bubble1');
+    const bubble2 = createBubble(300, 300, 'Adios', 'bubble2');
+    World.add(world, [bubble1, bubble2]);
+
+    // Mouse
+    const mouse = Mouse.create(render.canvas);
+    const mouseConstraint = MouseConstraint.create(engine, {
+      mouse: mouse,
+      constraint: {
+        stiffness: 0.2,
+        render: { visible: false }
+      }
+    });
+    World.add(world, mouseConstraint);
+
+    render.mouse = mouse;
+
+    // Dibujar texto sobre las burbujas
+    Events.on(render, 'afterRender', () => {
+      const ctx = render.context;
+      ctx.font = '20px Arial';
+      ctx.fillStyle = '#000';
+      ctx.textAlign = 'center';
+      ctx.textBaseline = 'middle';
+
+      [bubble1, bubble2].forEach(bubble => {
+        ctx.fillText(bubble.bubbleText, bubble.position.x, bubble.position.y);
+      });
+    });
+
+    // Reacción al contacto
+    Events.on(engine, 'collisionStart', event => {
+      event.pairs.forEach(pair => {
+        const { bodyA, bodyB } = pair;
+        if ((bodyA === bubble1 && bodyB === bubble2) || (bodyA === bubble2 && bodyB === bubble1)) {
+          bubble1.shrinking = true;
+          bubble2.shrinking = true;
+        }
+      });
+    });
+
+    Events.on(engine, 'collisionEnd', event => {
+      event.pairs.forEach(pair => {
+        const { bodyA, bodyB } = pair;
+        if ((bodyA === bubble1 && bodyB === bubble2) || (bodyA === bubble2 && bodyB === bubble1)) {
+          bubble1.shrinking = false;
+          bubble2.shrinking = false;
+        }
+      });
+    });
+
+    // Animar tamaño
+    Events.on(engine, 'beforeUpdate', () => {
+      [bubble1, bubble2].forEach(bubble => {
+        let scaleStep = 0.005;
+        if (bubble.shrinking) {
+          if (bubble.circleRadius > bubble.originalRadius * 0.6) {
+            let newRadius = bubble.circleRadius * (1 - scaleStep);
+            Body.scale(bubble, newRadius / bubble.circleRadius, newRadius / bubble.circleRadius);
+          }
+        } else {
+          if (bubble.circleRadius < bubble.originalRadius) {
+            let newRadius = bubble.circleRadius * (1 + scaleStep);
+            if (newRadius > bubble.originalRadius) newRadius = bubble.originalRadius;
+            Body.scale(bubble, newRadius / bubble.circleRadius, newRadius / bubble.circleRadius);
+          }
+        }
+      });
+    });
+  </script>
 </body>
 </html>
