--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Burbujas con rebotes controlados</title>
+  <title>Burbujas con márgenes</title>
   <style>
     html, body {
       margin: 0; padding: 0; overflow: hidden; background: #f0f8ff;
@@ -20,7 +20,7 @@
 
     const engine = Engine.create();
     const world = engine.world;
-    engine.gravity.y = 0; // sin gravedad
+    engine.gravity.y = 0;
 
     const width = window.innerWidth;
     const height = window.innerHeight;
@@ -54,21 +54,20 @@
     Render.run(render);
     Runner.run(Runner.create(), engine);
 
-    // Paredes invisibles
     const wallThickness = 50;
     const walls = [
-      Bodies.rectangle(allowedArea.left - wallThickness / 2, height / 2, wallThickness, height, { isStatic: true, restitution: 0.1, friction: 0.5 }),
-      Bodies.rectangle(allowedArea.right + wallThickness / 2, height / 2, wallThickness, height, { isStatic: true, restitution: 0.1, friction: 0.5 }),
-      Bodies.rectangle(width / 2, allowedArea.top - wallThickness / 2, width, wallThickness, { isStatic: true, restitution: 0.1, friction: 0.5 }),
-      Bodies.rectangle(width / 2, allowedArea.bottom + wallThickness / 2, width, wallThickness, { isStatic: true, restitution: 0.1, friction: 0.5 }),
+      Bodies.rectangle(allowedArea.left - wallThickness / 2, height / 2, wallThickness, height, { isStatic: true }),
+      Bodies.rectangle(allowedArea.right + wallThickness / 2, height / 2, wallThickness, height, { isStatic: true }),
+      Bodies.rectangle(width / 2, allowedArea.top - wallThickness / 2, width, wallThickness, { isStatic: true }),
+      Bodies.rectangle(width / 2, allowedArea.bottom + wallThickness / 2, width, wallThickness, { isStatic: true }),
     ];
     World.add(world, walls);
 
     function createBubble(x, y, text, label) {
       const radius = 150;
       const body = Bodies.circle(x, y, radius, {
-        restitution: 0.2,        // menos rebote para amortiguar choque
-        frictionAir: 0.1,        // aire para frenado natural
+        restitution: 0.2,
+        frictionAir: 0.1,
         friction: 0.2,
         label: label,
         render: {
@@ -117,7 +116,6 @@
           bubble1.shrinking = true;
           bubble2.shrinking = true;
 
-          // Reducir velocidad drásticamente al chocar para simular amortiguación
           [bodyA, bodyB].forEach(body => {
             Body.setVelocity(body, Vector.mult(body.velocity, 0.3));
           });
@@ -135,11 +133,11 @@
       });
     });
 
-    const MAX_SPEED = 15; // límite de velocidad máxima
+    const MAX_SPEED = 15;
 
     Events.on(engine, 'beforeUpdate', () => {
       [bubble1, bubble2].forEach(bubble => {
-        // Limitar velocidad máxima
+        // Limitar velocidad
         const speed = Math.sqrt(bubble.velocity.x ** 2 + bubble.velocity.y ** 2);
         if (speed > MAX_SPEED) {
           const limitedVelocity = Vector.mult(Vector.normalise(bubble.velocity), MAX_SPEED);
@@ -161,7 +159,7 @@
           }
         }
 
-        // Si sale fuera del área permitida, resetear posición
+        // Si sale completamente fuera del área, volver a origen
         const r = bubble.circleRadius;
         if (
           bubble.position.x + r < allowedArea.left ||
@@ -171,6 +169,15 @@
         ) {
           Body.setPosition(bubble, { ...bubble.originalPosition });
           Body.setVelocity(bubble, { x: 0, y: 0 });
+        }
+
+        // Si se está arrastrando, limitar manualmente dentro del área
+        if (mouseConstraint.body === bubble) {
+          const clampedX = Math.max(allowedArea.left + r, Math.min(bubble.position.x, allowedArea.right - r));
+          const clampedY = Math.max(allowedArea.top + r, Math.min(bubble.position.y, allowedArea.bottom - r));
+          if (clampedX !== bubble.position.x || clampedY !== bubble.position.y) {
+            Body.setPosition(bubble, { x: clampedX, y: clampedY });
+          }
         }
       });
     });
